RESOLVED FIXED31986
WebKit clients that don't implement didClearWindowObjectForFrameInScriptWorld should fall back to didClearWindowObject
https://bugs.webkit.org/show_bug.cgi?id=31986
Summary WebKit clients that don't implement didClearWindowObjectForFrameInScriptWorld...
Steve Falkenburg
Reported 2009-11-30 10:19:44 PST
IWebFrameLoadDelegatePrivate2 now exposes didClearWindowObjectForFrameInScriptWorld. This is a more specific isolated worlds version of didClearWindowObject. For clients that don't support didClearWindowObjectForFrameInScriptWorld, we should call didClearWindowObject instead.
Attachments
Fall back if E_NOTIMPL returned (1.41 KB, patch)
2009-11-30 10:22 PST, Steve Falkenburg
aroben: review+
Steve Falkenburg
Comment 1 2009-11-30 10:22:02 PST
Created attachment 44028 [details] Fall back if E_NOTIMPL returned
Adam Roben (:aroben)
Comment 2 2009-11-30 10:37:47 PST
Comment on attachment 44028 [details] Fall back if E_NOTIMPL returned r=me
Steve Falkenburg
Comment 3 2009-11-30 10:51:25 PST
Note You need to log in before you can comment on or make changes to this bug.