WebKit clients that don't implement didClearWindowObjectForFrameInScriptWorld should fall back to didClearWindowObject https://bugs.webkit.org/show_bug.cgi?id=31986

Reviewed by Adam Roben.

* WebFrame.cpp:
(WebFrame::dispatchDidClearWindowObjectInWorld): Fall back if E_NOTIMPL returned.



Canonical link: https://commits.webkit.org/42928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51500 268f45cc-cd09-0410-ab3c-d52691b4dbfc